--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yala</title>
-  <link rel="stylesheet" href="/CSS/estilo.css"> 
+  <link rel="stylesheet" href="./CSS/estilo.css"> 
+
+
 </head>
 
 <body>
