--- a/motorista.html
+++ b/motorista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorista Yala</title>
-    <link rel="stylesheet" href="/CSS/motorista.css">
+    <link rel="stylesheet" href="./CSS/motorista.css">
 </head>
 <body>
     <header class="header motorista"> 
