--- a/perguntas.html
+++ b/perguntas.html
@@ -3,14 +3,14 @@
  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/perguntas.css">
-    <img src="imagens/perguntas.jpeg" alt="perguntas" class="img1">
-    <img src="imagens/celulares propaganda.jpeg" alt="propaganda" class="img2">
+    <link rel="stylesheet" href="./CSS/perguntas.css">
+    <img src="./imagens/perguntas.jpeg" alt="perguntas" class="img1">
+    <img src="./imagens/celulares propaganda.jpeg" alt="propaganda" class="img2">
     <title>Perguntas Frequentes</title>
   </head>
 
   <header class="header">
-    <img src="imagens/logo_yala.png" alt="Logo">
+    <img src="./imagens/logo_yala.png" alt="Logo">
   </header>
 
 
@@ -25,7 +25,7 @@
 
   <footer class="footer">
     <div class="logo">
-        <img src="imagens/logo_yala.png" alt="Logo Yala">
+        <img src="./imagens/logo_yala.png" alt="Logo Yala">
     </div>
     <div class="privacy">
         <p>Termos de Privacidade</p>
