--- a/cadastro.html
+++ b/cadastro.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/cadastro.css">
-    <img src="/imagens/celular.png" alt="celular" class="img1">
-    <img src="/imagens/celulares.png" alt="celulares" class="img2">
-    <img src="imagens/propaganda.jpeg" alt="propaganda" class="img3">
+    <link rel="stylesheet" href="./assets/CSS/cadastro.css">
+    <img src="./assets/imagens/celular.png" alt="celular" class="img1">
+    <img src="./assets/imagens/celulares.png" alt="celulares" class="img2">
+    <img src="./assets/imagens/propaganda.jpeg" alt="propaganda" class="img3">
 
     <title>Cadastro</title>
    
 </head>
 
 <header class="header">
-    <img src="imagens/logo_yala.png" alt="Logo">
+    <img src="./assets/imagens/logo_yala.png" alt="Logo">
 </header>
 
 <body>
@@ -67,7 +67,7 @@
 
 <footer class="footer">
     <div class="logo">
-        <img src="imagens/logo_yala.png" alt="Logo Yala">
+        <img src="./assets/imagens/logo_yala.png" alt="Logo Yala">
     </div>
     <div class="privacy">
         <p>Termos de Privacidade</p>
