--- a/motorista.html
+++ b/motorista.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorista Yala</title>
-    <link rel="stylesheet" href="./CSS/motorista.css">
+    <link rel="stylesheet" href="./assets/CSS/motorista.css">
 </head>
 <body>
     <header class="header motorista"> 
         <button>Comece já</button>
-        <img src="/imagens/logo_yala.png" alt="Logo">
+        <img src="./assets/imagens/logo_yala.png" alt="Logo">
     </header>
 
     <h1> POR QUE SER YALA DRIVER? </h1>  
-    <img src="/imagens/yala_motoristas.png" alt="benefícios">
+    <img src="./assets/imagens/yala_motoristas.png" alt="benefícios">
 
     <footer class="footer motorista">
         <table>
