--- a/passageiro.html
+++ b/passageiro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Passageiro Yala</title>
-    <link rel="stylesheet" href="./CSS/passageiro.css">
+    <link rel="stylesheet" href="./assets/CSS/passageiro.css">
 </head>
 <body>
     <header class="header passageiro"> 
@@ -13,12 +13,12 @@
     </header>
 
     <h1> POR QUE SER YALA PASSENGER? </h1>  
-       <img src="/imagens/passageiro.png" alt="benefícios passageiro">
+       <img src="./assets/imagens/passageiro.png" alt="benefícios passageiro">
 
     <footer class="footer passageiro">
         <table>
             <tr>
-              <td><img  width="auto" height="auto" src="imagens/logo_yala.png" alt="logo"/></td>
+              <td><img  width="auto" height="auto" src="./assets/imagens/logo_yala.png" alt="logo"/></td>
               <td> 
                 <h2>
                     Termos de <br> privacidade
