--- a/perguntas.html
+++ b/perguntas.html
@@ -1,59 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./CSS/perguntas.css">
-  <title>Yala Perguntas Frequentes</title>
-</head>
-<body>
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/CSS/perguntas.css">
+    <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1">
+    <img src="./assets/imagens/celulares propaganda.jpeg" alt="propaganda" class="img2">
+    <title>Perguntas Frequentes</title>
+  </head>
+
   <header class="header">
-    <img src="./imagens/logo_yala.png" alt="Yala Logo">
+    <img src="./assets/imagens/logo_yala.png" alt="Logo">
   </header>
-  <hr>
-  <h1>Perguntas Frequentes</h1>
-  <div class="content-container">
-    <div class="text-container">
-      <h2>Yala mais que uma viagem</h2>
-      <ul>
-        <li>
-          <h3>Os preços são acessíveis?</h3>
-          <p>Sim, estamos trabalhando com as menores tarifas do mercado.</p>
-        </li>
-        <li>
-          <h3>O aplicativo é grátis?</h3>
-          <p>Sim, 100% grátis</p>
-        </li>
-        <li>
-          <h3>Como posso baixar o aplicativo Yala?</h3>
-          <p>Você pode baixar o aplicativo Yala gratuitamente na App Store (para dispositivos iOS) ou no Google Play Store (para dispositivos Android).</p>
-        </li>
-        <li>
-          <h3>Suporte ao usuário?</h3>
-          <p>Nós possuímos suporte 24h.</p>
-        </li>
-        <li>
-          <h3>Como um motorista pode se cadastrar na plataforma?</h3>
-          <p>Baixe o app Yala, clique em "Torne-se um Motorista" e siga as instruções para cadastrar suas informações. Após a aprovação, comece a dirigir.</p>
-        </li>
-        <li>
-          <h3>Quais métodos de pagamento são aceitos na Yala?</h3>
-          <p>Nossos métodos de pagamento, são cartões de crédito, e pix</p>
-        </li>
-      </ul>
-      <p>Em breve, você poderá testar uma nova experiência em aplicativo de mobilidade #YalaSeMove #GoNow</p>
-    </div>
-  </div>
+
+
+  <body>
+    <h1>Perguntas Frequentes</h1>
+    <h2>Yala mais que uma viagem</h2>
+    <h3>
+      Em breve, você poderá testar uma nova experiência em aplicativo de<br>
+      mobilidade #YalaSeMove#GoNow
+    </h3>
+  </body>
+
   <footer class="footer">
     <div class="logo">
-      <img src="./imagens/logo_yala.png" alt="Yala Logo">
+        <img src=".imagens/logo_yala.png" alt="Logo Yala">
     </div>
     <div class="privacy">
-      <ul>
-        <li><a href="#">Privacidade</a></li>
-        <li><a href="#">Termos</a></li>
-      </ul>
+        <p>Termos de Privacidade</p>
     </div>
-  </footer>
-</body>
+</footer>
+
+
 </html>
