Atualização da página de perguntas

--- a/perguntas.html
+++ b/perguntas.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/CSS/perguntas.css">
-    <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1">
-    <img src="./assets/imagens/celulares propaganda.jpeg" alt="propaganda" class="img2">
+    <link rel="stylesheet" href="./assets/CSS/perguntas.css" />
     <title>Perguntas Frequentes</title>
   </head>
 
-  <header class="header">
-    <img src="./assets/imagens/logo_yala.png" alt="Logo">
-  </header>
-
-
   <body>
-    <h1>Perguntas Frequentes</h1>
-    <h2>Yala mais que uma viagem</h2>
-    <h3>
-      Em breve, você poderá testar uma nova experiência em aplicativo de<br>
-      mobilidade #YalaSeMove#GoNow
-    </h3>
-  </body>
+    <header class="header">
+      <img src="./assets/imagens/logo_yala.png" alt="Logo" />
+    </header>
 
-  <footer class="footer">
-    <div class="logo">
-        <img src=".imagens/logo_yala.png" alt="Logo Yala">
-    </div>
-    <div class="privacy">
+    <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1" />
+    <img
+      src="./assets/imagens/celulares propaganda.jpeg" alt="propaganda" class="img2"/>
+      <h3 class="side-text">
+        Em breve, você poderá testar uma nova experiência em aplicativo de
+        mobilidade <br> #YalaSeMove#GoNow
+      </h3>
+
+    <footer class="footer">
+      <div class="logo">
+        <img src="./assets/imagens/logo_yala.png" alt="Logo Yala" />
+      </div>
+      <div class="privacy">
         <p>Termos de Privacidade</p>
-    </div>
-</footer>
-
-
+      </div>
+    </footer>
+  </body>
 </html>
