--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="header">
     <button>Comece já</button>
-    <img src="/imagens/logo_yala.png" alt="Logo">
+    <img src="./assets/imagens/logo_yala.png" alt="Logo">
     <hr>
   </header>
 
@@ -39,12 +39,12 @@
         </b>
       </h3>
     </p>
-    <img src="/imagens/imagem_banner.png" alt="Celulares">
+    <img src="./assets/imagens/imagem_banner.png" alt="Celulares">
     <button>Comece já</button>
   </div>
 
   <div class="parceiros">
-    <img src="/imagens/parceiros.png" alt="Parceiros">
+    <img src="./assets/imagens/parceiros.png" alt="Parceiros">
   </div>
 
 
