--- a/motorista.html
+++ b/motorista.html
@@ -18,7 +18,7 @@
     <footer class="footer motorista">
         <table>
             <tr>
-              <td><img  width="auto" height="auto" src="imagens/logo_yala.png" alt="logo"/></td>
+              <td><img  width="auto" height="auto" src="./assets/imagens/logo_yala.png" alt="logo"/></td>
               <td> 
                 <h2>
                     Termos de <br> privacidade
