--- a/passageiro.html
+++ b/passageiro.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header passageiro"> 
         <button>Comece já</button>
-        <img src="/imagens/logo_yala.png" alt="Logo">
+        <img src="./assets/imagens/logo_yala.png" alt="Logo">
     </header>
 
     <h1> POR QUE SER YALA PASSENGER? </h1>  
