Navegação entre as páginas

--- a/perguntas.html
+++ b/perguntas.html
@@ -10,6 +10,11 @@
   <body>
     <header class="header">
       <img src="./assets/imagens/logo_yala.png" alt="Logo" />
+      <nav>
+        <a href="passageiro.html">Passageiro</a>
+        <a href="motorista.html">Motorista</a>
+        <a href="cadastro.html">Cadastro</a>
+    </nav>
     </header>
 
     <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1" />
