Página index pronta com correcao de erros

--- a/cadastro.html
+++ b/cadastro.html
@@ -23,10 +23,10 @@
         <br><br>
         <label for="mail"></label>
         <input type="email" id="email" name="email" placeholder="Seu email" required>
-        <label for="telefone"></label>
+        <label for="telefone"> </label>
         <input type="tel" id="telefone" name="telefone" placeholder="Seu telefone" required>
         <br><br><br>
-        <label> Tenho interesse em ser:</label><br>
+        <label for="interesse"> Tenho interesse em ser:</label><br>
         <input type ="radio"  name="options" id="motorista" value="motorista"><span>Motorista</span> </input><br><br>
         <input type ="radio"  name="options" id="passageiro" value="passageiro"><span>Passageiro</span> </input><br><br>
         <button class="custom-button">
@@ -62,17 +62,18 @@
                  jornada segura e confiável.</h3>
         </div>
 
+        <footer class="footer">
+            <div class="logo">
+                <img src="./assets/imagens/logo_yala.png" alt="Logo Yala">
+            </div>
+            <div class="privacy">
+                <p>Termos de Privacidade</p>
+            </div>
+        </footer>
 
 </body>
 
-<footer class="footer">
-    <div class="logo">
-        <img src="./assets/imagens/logo_yala.png" alt="Logo Yala">
-    </div>
-    <div class="privacy">
-        <p>Termos de Privacidade</p>
-    </div>
-</footer>
+
 
 
 
