--- a/index.html
+++ b/index.html
@@ -5,49 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yala</title>
   <link rel="stylesheet" href="./assets/CSS/style.css"> 
-
-
 </head>
-
 <body>
-
   <header class="header">
-    <button>Comece já</button>
-    <img src="./assets/imagens/logo_yala.png" alt="Logo">
+    <a href="./cadastro.html"><button>Começe já</button></a>
+    <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="logo">
     <hr>
   </header>
 
-  <div class = "banner"> 
-
-    <h1> 
-        Faça corridas com </br> 
+  <main>
+    <section class="banner"> 
+      <h1> 
+        Faça corridas com <br> 
         as melhores tarifas 
-    </h1>
+      </h1>
+      <p> 
+        <h2>
+          Descubra a liberdade com Yala! Seu ingresso para uma jornada sem complicações. <br>
+          Com nosso aplicativo intuitivo, solicitar uma corrida é fácil como um clique.<br>
+          Motoristas confiáveis, viagens seguras. 
+        </h2>
+      </p>
+      <p> 
+        <h3> 
+          <b>
+            Em breve disponível para baixar.
+          </b>
+        </h3>
+      </p>
+      <img src="./assets/imagens/imagem_banner.png" class="img-fluid" alt="Celulares">
+      <a href="./cadastro.html"><button>Cadastre-se</button></a>
+    </section>
 
-    <p> 
-      <h2>
-      Descubra a liberdade com Yala! Seu ingresso para uma jornada sem complicações. <br>
-      Com nosso aplicativo intuitivo, solicitar uma corrida é fácil como um clique.<br>
-      Motoristas confiáveis, viagens seguras. 
-      </h2>
-    </p>
-
-    <p> 
-      <h3> 
-        <b>
-          Em breve disponível para baixar.
-        </b>
-      </h3>
-    </p>
-    <img src="./assets/imagens/imagem_banner.png" alt="Celulares">
-    <button>Comece já</button>
-  </div>
-
-  <div class="parceiros">
-    <img src="./assets/imagens/parceiros.png" alt="Parceiros">
-  </div>
-
-
+    <div class="footer">
+      <div class="parceiros">
+        <img src="assets/imagens/parceiros.png" alt="Parceiros">
+      </div>
+  </main>
 </body>
 </html>
-
