Página motorista pronta

--- a/cadastro.html
+++ b/cadastro.html
@@ -14,6 +14,7 @@
             <li><a href=motorista.html> Motorista</a></li>
             <li><a href="passageiro.html">Passageiro</a></li>
             <li><a href="perguntas.html">Perguntas frequentes</a></li>
+            <li><a href="missao.html">Missão</a></li>
         </ul>
     </header>
 
