--- a/motorista.html
+++ b/motorista.html
@@ -8,23 +8,27 @@
 </head>
 <body>
     <header class="header motorista"> 
-        <button>Comece já</button>
         <img src="./assets/imagens/logo_yala.png" alt="Logo">
+        <ul> 
+            <li><a href="cadastro.html"> Comece já!</a></li>
+            <li><a href="passageiro.html">Passageiro</a></li>
+            <li><a href="perguntas.html">Perguntas frequentes</a></li>
+            <li><a href="missao.html">Missão</a></li>
+        </ul>
     </header>
 
     <h1> POR QUE SER YALA DRIVER? </h1>  
     <img src="./assets/imagens/yala_motoristas.png" alt="benefícios">
 
-    <footer class="footer motorista">
+    <footer class="footer passageiro">
         <table>
+            <th>
             <tr>
-              <td><img  width="auto" height="auto" src="./assets/imagens/logo_yala.png" alt="logo"/></td>
-              <td> 
-                <h2>
+                <h3>
                     Termos de <br> privacidade
-                </h2>
-                
+                </h3>
             </tr>
+            </th>
     </footer>
 </body>
 </html>
