Página passageiro pronta

--- a/passageiro.html
+++ b/passageiro.html
@@ -8,22 +8,25 @@
 </head>
 <body>
     <header class="header passageiro"> 
-        <button>Comece já</button>
         <img src="./assets/imagens/logo_yala.png" alt="Logo">
+        <ul> 
+            <li><a href="cadastro.html"> Comece já!</a></li>
+            <li><a href="motorista.html">Motorista</a></li>
+            <li><a href="perguntas.html">Perguntas frequentes</a></li>
+            <li><a href="missao.html">Missão</a></li>
+        </ul>
     </header>
 
     <h1> POR QUE SER YALA PASSENGER? </h1>  
        <img src="./assets/imagens/passageiro.png" alt="benefícios passageiro">
 
-    <footer class="footer passageiro">
+       <footer class="footer passageiro">
         <table>
             <th>
             <tr>
-              <td><img  width="auto" height="auto" src="./assets/imagens/logo_yala.png" alt="logo"/></td>
-              <td> 
-                <h2>
+                <h3>
                     Termos de <br> privacidade
-                </h2>
+                </h3>
             </tr>
             </th>
     </footer>
