Perguntas frequentes prontas

--- a/perguntas.html
+++ b/perguntas.html
@@ -7,31 +7,32 @@
     <title>Perguntas Frequentes</title>
   </head>
 
-  <body>
-    <header class="header">
-      <img src="./assets/imagens/logo_yala.png" alt="Logo" />
-      <nav>
-        <a href="passageiro.html">Passageiro</a>
-        <a href="motorista.html">Motorista</a>
-        <a href="cadastro.html">Cadastro</a>
-    </nav>
-    </header>
+  <header class="header perguntas"> 
+    <img src="./assets/imagens/logo_yala.png" alt="Logo">
+    <ul> 
+        <li><a href="cadastro.html"> Comece já!</a></li>
+        <li><a href="passageiro.html">Passageiro</a></li>
+        <li><a href="motorista.html">Motorista</a></li>
+        <li><a href="perguntas.html">Perguntas frequentes</a></li>
+        <li><a href="missao.html">Missão</a></li>
+    </ul>
+</header>
 
     <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1" />
-    <img
-      src="./assets/imagens/celulares propaganda.jpeg" alt="propaganda" class="img2"/>
-      <h3 class="side-text">
+     <h2 class="side-text">
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
-      </h3>
+      </h2>
 
-    <footer class="footer">
-      <div class="logo">
-        <img src="./assets/imagens/logo_yala.png" alt="Logo Yala" />
-      </div>
-      <div class="privacy">
-        <p>Termos de Privacidade</p>
-      </div>
+      <footer class="footer passageiro">
+        <table>
+            <th>
+            <tr>
+                <h3>
+                    Termos de <br> privacidade
+                </h3>
+            </tr>
+            </th>
     </footer>
   </body>
 </html>
