Página de Missao pronta e correcao do footer

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,6 +11,8 @@
     <header class="header">
         <img src="./assets/imagens/logo_yala.png" alt="Logo">
         <ul> 
+            <li><a href="index.html"> Página Inicial</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
             <li><a href=motorista.html> Motorista</a></li>
             <li><a href="passageiro.html">Passageiro</a></li>
             <li><a href="perguntas.html">Perguntas frequentes</a></li>
@@ -57,14 +59,13 @@
     </script>
 
 <footer class="footer passageiro">
-    <table>
-        <th>
+    <table aria-label="Termos de privacidade">
         <tr>
-            <h3>
-                Termos de <br> privacidade
-            </h3>
+            <th>
+                <h3>Termos de privacidade</h3>
+            </th>
         </tr>
-        </th>
+    </table>
 </footer>
 </body>
 </html>
