--- a/perguntas.html
+++ b/perguntas.html
@@ -10,12 +10,13 @@
   <header class="header perguntas"> 
     <img src="./assets/imagens/logo_yala.png" alt="Logo">
     <ul> 
-        <li><a href="cadastro.html"> Comece já!</a></li>
-        <li><a href="passageiro.html">Passageiro</a></li>
-        <li><a href="motorista.html">Motorista</a></li>
-        <li><a href="perguntas.html">Perguntas frequentes</a></li>
-        <li><a href="missao.html">Missão</a></li>
-    </ul>
+      <li><a href="index.html"> Página Inicial</a></li>
+      <li><a href="cadastro.html">Cadastro</a></li>
+      <li><a href=motorista.html> Motorista</a></li>
+      <li><a href="passageiro.html">Passageiro</a></li>
+      <li><a href="perguntas.html">Perguntas frequentes</a></li>
+      <li><a href="missao.html">Missão</a></li>
+  </ul>
 </header>
 
     <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1" />
@@ -24,15 +25,14 @@
         mobilidade <br> #YalaSeMove#GoNow
       </h2>
 
-      <footer class="footer passageiro">
-        <table>
-            <th>
-            <tr>
-                <h3>
-                    Termos de <br> privacidade
-                </h3>
-            </tr>
-            </th>
-    </footer>
+        <footer class="footer passageiro">
+          <table aria-label="Termos de privacidade">
+              <tr>
+                  <th>
+                      <h3>Termos de privacidade</h3>
+                  </th>
+              </tr>
+          </table>
+      </footer>
   </body>
 </html>
