--- a/passageiro.html
+++ b/passageiro.html
@@ -10,8 +10,10 @@
     <header class="header passageiro"> 
         <img src="./assets/imagens/logo_yala.png" alt="Logo">
         <ul> 
-            <li><a href="cadastro.html"> Comece já!</a></li>
-            <li><a href="motorista.html">Motorista</a></li>
+            <li><a href="index.html"> Página Inicial</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
+            <li><a href=motorista.html> Motorista</a></li>
+            <li><a href="passageiro.html">Passageiro</a></li>
             <li><a href="perguntas.html">Perguntas frequentes</a></li>
             <li><a href="missao.html">Missão</a></li>
         </ul>
@@ -21,14 +23,13 @@
        <img src="./assets/imagens/passageiro.png" alt="benefícios passageiro">
 
        <footer class="footer passageiro">
-        <table>
-            <th>
+        <table aria-label="Termos de privacidade">
             <tr>
-                <h3>
-                    Termos de <br> privacidade
-                </h3>
+                <th>
+                    <h3>Termos de privacidade</h3>
+                </th>
             </tr>
-            </th>
+        </table>
     </footer>
 </body>
 </html>
