Responsividade das imagens

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="./assets/imagens/logo_yala.png" alt="Logo">
+        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
         <ul> 
             <li><a href="index.html"> Página Inicial</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
