--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="footer">
       <div class="parceiros">
-        <img src="assets/imagens/parceiros.png" alt="Parceiros">
+        <img src="./assets/imagens/parceiros.png" class="img-fluid" alt="Parceiros">
       </div>
   </main>
 </body>
