--- a/missao.html
+++ b/missao.html
@@ -7,8 +7,8 @@
     <title>Missão</title>
 </head>
 <body>
-    <header class="header missao"> 
-        <img src="./assets/imagens/logo_yala.png" alt="Logo">
+    <header class="header missao">
+        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo"> 
         <ul> 
             <li><a href="index.html"> Página Inicial</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
@@ -29,11 +29,11 @@
             Nossa missão é transformar sua jornada <br>
             em uma experiência única.</p>
         </div>
-        <img src="./assets/imagens/celular.png" alt="celular" class="img-right">
+        <img src="./assets/imagens/celular.png" class="img-fluid" alt="img-right">
     </div>
 
     <div class="bloco2">
-        <img src="./assets/imagens/celulares.png" alt="celulares" class="img-left">
+        <img src="./assets/imagens/celulares.png" class="img-fluid" alt="img-left">
         <div class="text-content">
             <h1>+ Segurança, - Preocupação <br> garantindo sua tranquilidade</h1>
             <p>Sua segurança é nossa paixão! <br>
@@ -50,7 +50,7 @@
              dos seus dedos. Peça uma viagem com facilidade <br>
             e embarque em uma jornada segura e confiável.</p>
         </div>
-        <img src="./assets/imagens/celulares propaganda.jpeg" alt="celulares prop." class="img-right"> 
+        <img src="./assets/imagens/celulares propaganda.jpeg" class="img-fluid" alt="img-right">
     </div>
 
     <footer class="footer passageiro">
