--- a/motorista.html
+++ b/motorista.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header motorista"> 
-        <img src="./assets/imagens/logo_yala.png" alt="Logo">
+        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
         <ul> 
             <li><a href="index.html"> Página Inicial</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
@@ -20,8 +20,7 @@
     </header>
 
     <h1> POR QUE SER YALA DRIVER? </h1>  
-    <img src="./assets/imagens/yala_motoristas.png" alt="benefícios">
-
+    <img src="./assets/imagens/yala_motoristas.png" class="img-fluid" alt="benefícios">
     <footer class="footer passageiro">
         <table aria-label="Termos de privacidade">
             <tr>
