--- a/perguntas.html
+++ b/perguntas.html
@@ -8,7 +8,7 @@
   </head>
 
   <header class="header perguntas"> 
-    <img src="./assets/imagens/logo_yala.png" alt="Logo">
+    <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
     <ul> 
       <li><a href="index.html"> Página Inicial</a></li>
       <li><a href="cadastro.html">Cadastro</a></li>
@@ -18,14 +18,13 @@
       <li><a href="missao.html">Missão</a></li>
   </ul>
 </header>
-
-    <img src="./assets/imagens/perguntas.jpeg" alt="perguntas" class="img1" />
+    <img src="./assets/imagens/perguntas.jpeg" class="img-fluid" alt="img1">
      <h2 class="side-text">
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
       </h2>
 
-        <footer class="footer passageiro">
+        <footer class="footer perguntas">
           <table aria-label="Termos de privacidade">
               <tr>
                   <th>
