--- a/passageiro.html
+++ b/passageiro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header passageiro"> 
-        <img src="./assets/imagens/logo_yala.png" alt="Logo">
+        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
         <ul> 
             <li><a href="index.html"> Página Inicial</a></li>
             <li><a href="cadastro.html">Cadastro</a></li>
@@ -19,8 +19,8 @@
         </ul>
     </header>
 
-    <h1> POR QUE SER YALA PASSENGER? </h1>  
-       <img src="./assets/imagens/passageiro.png" alt="benefícios passageiro">
+    <h1> POR QUE SER YALA PASSENGER? </h1>
+    <img src="./assets/imagens/passageiro.png" class="img-fluid" alt="benefícios passageiro">  
 
        <footer class="footer passageiro">
         <table aria-label="Termos de privacidade">
