--- a/perguntas.html
+++ b/perguntas.html
@@ -24,14 +24,14 @@
         mobilidade <br> #YalaSeMove#GoNow
       </h2>
 
-        <footer class="footer perguntas">
-          <table aria-label="Termos de privacidade">
-              <tr>
-                  <th>
-                      <h3>Termos de privacidade</h3>
-                  </th>
-              </tr>
-          </table>
-      </footer>
+      <footer class="footer passageiro">
+        <table aria-label="Termos de privacidade">
+            <tr>
+                <th>
+                    <h3>Termos de privacidade</h3>
+                </th>
+            </tr>
+        </table>
+    </footer>
   </body>
 </html>
