--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="parceiros">
         <img src="./assets/imagens/parceiros.png" class="img-fluid" alt="Parceiros">
       </div>
+    </div>
   </main>
 </body>
 </html>
