Melhorando a página de perguntas frequentes

--- a/perguntas.html
+++ b/perguntas.html
@@ -18,7 +18,7 @@
       <li><a href="missao.html">Missão</a></li>
   </ul>
 </header>
-    <img src="./assets/imagens/perguntas.jpeg" class="img-fluid" alt="img1">
+    <img src="./assets/imagens/perguntas_frequentes.png" class="img-fluid" alt="img1">
      <h2 class="side-text">
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
