--- a/perguntas.html
+++ b/perguntas.html
@@ -18,7 +18,9 @@
       <li><a href="missao.html">Missão</a></li>
   </ul>
 </header>
-    <img src="./assets/imagens/perguntas_frequentes.png" class="img-fluid" alt="img1">
+<div class="img-container">
+  <img src="./assets/imagens/perguntas_frequentes.png" class="img-fluid" alt="perguntas">
+</div>
      <h2 class="side-text">
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
