Alteracao da imagem

--- a/missao.html
+++ b/missao.html
@@ -50,7 +50,7 @@
              dos seus dedos. Peça uma viagem com facilidade <br>
             e embarque em uma jornada segura e confiável.</p>
         </div>
-        <img src="./assets/imagens/celulares propaganda.jpeg" class="img-fluid" alt="img-right">
+        <img src="./assets/imagens/propaganda.jpeg" class="img-fluid" alt="img-right">
     </div>
 
     <footer class="footer passageiro">
