--- a/motorista.html
+++ b/motorista.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motorista Yala</title>
     <link rel="stylesheet" href="./assets/CSS/motorista.css">
-    <link rel="stylesheet" href="navbar.html"
+    <link rel="stylesheet" href="navbar.html">
 </head>
 <body>
     <header class="header motorista"> 
