--- a/passageiro.html
+++ b/passageiro.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Passageiro Yala</title>
     <link rel="stylesheet" href="./assets/CSS/passageiro.css">
+    <link rel="stylesheet" href="./navbar.html">
+
 </head>
 <body>
     <header class="header passageiro"> 
