--- a/missao.html
+++ b/missao.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/CSS/missao.css">
+    <link rel="stylesheet" href="./navbar.html">
     <title>Missão</title>
 </head>
 <body>
-    <header class="header missao">
-        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo"> 
-        <ul> 
-            <li><a href="index.html"> Página Inicial</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
-            <li><a href=motorista.html> Motorista</a></li>
-            <li><a href="passageiro.html">Passageiro</a></li>
-            <li><a href="perguntas.html">Perguntas frequentes</a></li>
-            <li><a href="missao.html">Missão</a></li>
-        </ul>
-    </header>
-
     <div class="bloco1">
         <div class="text-content">
             <h1>Sua jornada. Nossa missão</h1>
