--- a/perguntas.html
+++ b/perguntas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/CSS/perguntas.css" />
+    <link rel="stylesheet" href="./navbar.html">
     <title>Perguntas Frequentes</title>
   </head>
 
