--- a/cadastro.html
+++ b/cadastro.html
@@ -3,27 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/CSS/cadastro.css"> 
-    <link rel="stylesheet" href="./navbar.html">
-
-
     <title>Cadastro</title>
+    <link rel="stylesheet" href="./assets/CSS/cadastro.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> 
 </head>
 <body>
-    <header class="header">
-        <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
-        <ul> 
-            <li><a href="index.html"> Página Inicial</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
-            <li><a href=motorista.html> Motorista</a></li>
-            <li><a href="passageiro.html">Passageiro</a></li>
-            <li><a href="perguntas.html">Perguntas frequentes</a></li>
-            <li><a href="missao.html">Missão</a></li>
-        </ul>
-    </header>
-
-    <br><h1>Cadastre-se agora. 
-        <br> Os primeiros inscritos terão benefícios especiais!</h1> <br>
+    <header class="navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg">
+            <div class="container-fluid">
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
+                </a>
+                <!-- Botão do menu para telas menores -->
+                <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>                        
+                <!-- Menu -->
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Página Inicial</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cadastro.html">Cadastro</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="motorista.html">Motorista</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="passageiro.html">Passageiro</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="missao.html">Missão</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="perguntas.html">Perguntas Frequentes</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+      </header>
+<main>
+    <h1 class="h1">Cadastre-se agora. 
+        <br> Os primeiros inscritos terão benefícios especiais!</h1> <br>    
 
     <form id="Form">
         <label for="email">Email:</label>
@@ -32,17 +56,16 @@
         <label for="telefone">Telefone:</label>
         <input type="tel" id="telefone" name="telefone" placeholder="Seu telefone" required><br><br>
         <br><br>
-        <label for="options">Tenho interesse em ser:</label><br>
+        <label for="options" class="label">Tenho interesse em ser:</label><br>
         <label>
             <input type="radio" name="options" id="motorista" value="motorista">
-            Motorista
+            <span>Motorista</span>
         </label><br>
         
         <label>
             <input type="radio" name="options" id="passageiro" value="passageiro">
-            Passageiro
+            <span>Passageiro</span>
         </label><br>
-    
     </form>
 
     <button id="submitButton">Entre já</button>
@@ -59,8 +82,8 @@
             }
         });
     </script>
-
-<footer class="footer passageiro">
+</main>
+<footer class="footer cadastro">
     <table aria-label="Termos de privacidade">
         <tr>
             <th>
