--- a/missao.html
+++ b/missao.html
@@ -4,54 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/CSS/missao.css">
-    <link rel="stylesheet" href="./navbar.html">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> 
+
     <title>Missão</title>
 </head>
 <body>
-    <div class="bloco1">
-        <div class="text-content">
-            <h1>Sua jornada. Nossa missão</h1>
-            <p>Junte-se ao nosso grupo exclusivo<br>
-             no WhatsApp para atualizações e interações<br>
-            emocionantes. Conecte-se com passageiros e <br> 
-            motoristas, compartilhe suas histórias.<br>
-            Nossa missão é transformar sua jornada <br>
-            em uma experiência única.</p>
-        </div>
-        <img src="./assets/imagens/celular.png" class="img-fluid" alt="img-right">
-    </div>
+    <header class="navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
+            </a>
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Página Inicial</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cadastro.html">Cadastro</a>
+                </li>            
+                <li class="nav-item">
+                  <a class="nav-link" href="motorista.html">Motorista</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="passageiro.html">Passageiro</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="missao.html">Missão</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="perguntas.html">Perguntas Frequentes</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </header>
 
-    <div class="bloco2">
-        <img src="./assets/imagens/celulares.png" class="img-fluid" alt="img-left">
-        <div class="text-content">
-            <h1>+ Segurança, - Preocupação <br> garantindo sua tranquilidade</h1>
-            <p>Sua segurança é nossa paixão! <br>
-                Viaje com tranquilidade e liberdade. 
-                <br> Estamos ao seu lado, garantindo sua segurança <br>
-                a cada passo. Sua jornada, nossa responsabilidade!</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="bloco1">
+                        <div class="text-content">
+                            <h1>Sua jornada. Nossa missão</h1>
+                            <p>Junte-se ao nosso grupo exclusivo no WhatsApp para atualizações e interações emocionantes. Conecte-se com passageiros e motoristas, compartilhe suas histórias. Nossa missão é transformar sua jornada em uma experiência única.</p>
+                        </div>
+                        <img src="./assets/imagens/celular.png" class="img-fluid img-right" alt="img-right">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="bloco2">
+                        <img src="./assets/imagens/celulares.png" class="img-fluid img-left" alt="img-left">
+                        <div class="text-content">
+                            <h1>+ Segurança, - Preocupação garantindo sua tranquilidade</h1>
+                            <p>Sua segurança é nossa paixão! Viaje com tranquilidade e liberdade. Estamos ao seu lado, garantindo sua segurança a cada passo. Sua jornada, nossa responsabilidade!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="bloco3">
+                        <div class="text-content">
+                            <h1>O futuro em movimento a um toque de distância.</h1>
+                            <p>Com apenas um toque, a Yala está ao alcance dos seus dedos. Peça uma viagem com facilidade e embarque em uma jornada segura e confiável.</p>
+                        </div>
+                        <img src="./assets/imagens/propaganda.jpeg" class="img-fluid img-right" alt="img-right">
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="bloco3">
-        <div class="text-content">
-            <h1>O futuro em movimento <br>a um toque de distância.</h1>
-            <p>Com apenas um toque, a Yala está ao alcance <br>
-             dos seus dedos. Peça uma viagem com facilidade <br>
-            e embarque em uma jornada segura e confiável.</p>
+    <footer class="footer cadastro">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <h3>Termos de privacidade</h3>
+            </div>
+          </div>
         </div>
-        <img src="./assets/imagens/propaganda.jpeg" class="img-fluid" alt="img-right">
-    </div>
-
-    <footer class="footer passageiro">
-        <table aria-label="Termos de privacidade">
-            <tr>
-                <th>
-                    <h3>Termos de privacidade</h3>
-                </th>
-            </tr>
-        </table>
     </footer>
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
      
 </body>
 </html>
