--- a/perguntas.html
+++ b/perguntas.html
@@ -4,37 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/CSS/perguntas.css" />
-    <link rel="stylesheet" href="./navbar.html">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> 
     <title>Perguntas Frequentes</title>
   </head>
 
-  <header class="header perguntas"> 
-    <img src="./assets/imagens/logo_yala.png" class="img-fluid" alt="Logo">
-    <ul> 
-      <li><a href="index.html"> Página Inicial</a></li>
-      <li><a href="cadastro.html">Cadastro</a></li>
-      <li><a href=motorista.html> Motorista</a></li>
-      <li><a href="passageiro.html">Passageiro</a></li>
-      <li><a href="perguntas.html">Perguntas frequentes</a></li>
-      <li><a href="missao.html">Missão</a></li>
-  </ul>
+  <header class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
+        </a>
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Página Inicial</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cadastro.html">Cadastro</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link" href="motorista.html">Motorista</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="passageiro.html">Passageiro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="missao.html">Missão</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="perguntas.html">Perguntas Frequentes</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 </header>
 <div class="img-container">
   <img src="./assets/imagens/perguntas_frequentes.png" class="img-fluid" alt="perguntas">
 </div>
+
      <h2 class="side-text">
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
       </h2>
 
-      <footer class="footer passageiro">
-        <table aria-label="Termos de privacidade">
-            <tr>
-                <th>
-                    <h3>Termos de privacidade</h3>
-                </th>
-            </tr>
-        </table>
+      <footer class="footer cadastro">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <h3>Termos de privacidade</h3>
+            </div>
+          </div>
+        </div>
     </footer>
   </body>
 </html>
