--- a/cadastro.html
+++ b/cadastro.html
@@ -76,7 +76,6 @@
       </div>
     </main>
   
-    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       document.getElementById('submitButton').addEventListener('click', function() {
@@ -90,7 +89,7 @@
         }
       });
     </script>
-<footer class="footer cadastro">
+<footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
