--- a/motorista.html
+++ b/motorista.html
@@ -24,7 +24,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="cadastro.html">Cadastro</a>
-                </li>            
+              </li>            
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="motorista.html">Motorista</a>
                 </li>
@@ -41,7 +41,7 @@
             </div>
           </div>
         </nav>
-    </header>
+      </header>
 
     <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
         <div>
@@ -50,7 +50,7 @@
         </div>
     </div>
 
-    <footer class="footer cadastro">
+    <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -59,6 +59,8 @@
           </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
 
