--- a/passageiro.html
+++ b/passageiro.html
@@ -51,8 +51,10 @@
             <img src="./assets/imagens/passageiro.png" class="img-fluid" alt="benefícios" style="max-width: 80%; height: auto;">
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <footer class="footer cadastro">
+
+    <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
