--- a/perguntas.html
+++ b/perguntas.html
@@ -50,8 +50,10 @@
         Em breve, você poderá testar uma nova experiência em aplicativo de
         mobilidade <br> #YalaSeMove#GoNow
       </h2>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-      <footer class="footer cadastro">
+
+      <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
