--- a/motorista.html
+++ b/motorista.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="navbar">
-        <nav class="navbar navbar-expand-lg navbar-light bg">
+        <nav class="navbar navbar-expand-lg navbar-dark bg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
