--- a/perguntas.html
+++ b/perguntas.html
@@ -9,10 +9,10 @@
   </head>
 
   <header class="navbar">
-    <nav class="navbar navbar-expand-lg navbar-light bg">
+    <nav class="navbar navbar-expand-lg navbar-dark bg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
+          <img class="logo" src="./assets/imagens/logo_yala.png" alt="Logo">
         </a>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
