--- a/motorista.html
+++ b/motorista.html
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img class="logo" src="/assets/imagens/logo_yala.png" alt="Logo">
+              <img class="logo" src="./assets/imagens/logo_yala.png" alt="Logo">
             </a>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
